--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">RentingUtilities</string>
+    <string name="appName">Share &amp; Get</string>
 </resources>
