--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="appName">Share &amp; Get</string>
+
+    <!-- Bottom Navigation -->
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="addItem">Add item</string>
+    <string name="whishlist">Whislist</string>
+    <string name="login">Login</string>
+    <string name="profile">Profile</string>
+
 </resources>
