--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -3,10 +3,22 @@
 
     <!-- Bottom Navigation -->
     <string name="home">Home</string>
-    <string name="search">Search</string>
-    <string name="addItem">Add item</string>
-    <string name="whishlist">Whislist</string>
+    <string name="items">Items</string>
+    <string name="bookings">Bookings</string>
     <string name="login">Login</string>
     <string name="profile">Profile</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Login -->
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="submit">Submit</string>
+
+    <!-- Validation -->
+    <string name="someErrors">There are some errors</string>
+    <string name="required">This field is required</string>
+    <string name="invalidEmail">This field is not a valid email</string>
 
 </resources>
