--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="someErrors">There are some errors</string>
     <string name="required">This field is required</string>
     <string name="invalidEmail">This field is not a valid email</string>
+    <string name="errorLogin">Your email and password doesn\'t match our records</string>
 
 </resources>
