register and edit user

--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -20,11 +20,13 @@
 
     <!-- Register -->
     <string name="username">Username</string>
+    <string name="address">Address</string>
 
     <!-- Items -->
     <string name="yourItems">Your items</string>
     <string name="wishlist">Wishlist</string>
     <string name="requests">Requests</string>
+    <string name="setImage">Set Image</string>
 
     <!-- Item Detail -->
     <string name="detail">Detail</string>
