Google maps and address to item in frontend

--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="condition">Condition</string>
     <string name="tags">Tags</string>
     <string name="book">Book</string>
+    <string name="pickUpLocation">Pick up location</string>
 
     <!-- Booking -->
     <string name="startDateTime">When you want to get?</string>
