redirect to login when tried to book without login

--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="tags">Tags</string>
     <string name="book">Book</string>
     <string name="pickUpLocation">Pick up location</string>
+    <string name="addToWishlist">Add to Wishlist</string>
 
     <!-- Booking -->
     <string name="startDateTime">When you want to get?</string>
