--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="itemImageDescription">Item image</string>
     <string name="name">Name</string>
     <string name="description">Description</string>
-    <string name="price">Price</string>
+    <string name="price">Price per Day</string>
     <string name="category">Category</string>
     <string name="condition">Condition</string>
     <string name="tags">Tags</string>
